@@ -19,6 +19,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Fix a Cray-mode bug with jobs ending immediately when spanning nodes of 
       different proc counts when specifying -l procs. TRQ-1365.
   b - Don't fail to make the tmpdir for sister moms. bugzilla #220, TRQ-1403.
+  c - Fix crashes due to unprotected array accesses. TRQ-1395.
 
 4.1.3
   b - fix a security loophole that potentially allowed an interactive job to run 
